--- a/utils.css
+++ b/utils.css
@@ -2,7 +2,7 @@
     text-align: center;
   }
   .bg{
-    background-color: #93f0a3;
+    background-color: #4955f3;
   }
   .flex{
     display:flex;
@@ -35,3 +35,13 @@
     width:15vw;
     border:2px solid black;
   }
+
+  
+@media only screen and (max-width: 600px) {
+  .container {
+    width: 76vw;
+  }
+.input{
+  width: 64vw;
+}
+ }
